--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "@apollo/server": "^4.7.0",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^11.0.5",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "mongoose": "^7.0.4",
+    "nest": "^0.1.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
